cmake_minimum_required(VERSION 3.17)

include(${WORKSPACE}/etc/base.cmake)

project(OpenFOAM)

add_library(${PROJECT_NAME} SHARED
global.C
argList.C
clock.C
etcFiles.C
fileOperation.C
fileOperationInitialise.C
uncollatedFileOperation.C
masterUncollatedFileOperation.C
collatedFileOperation.C
hostCollatedFileOperation.C
threadedCollatedOFstream.C
OFstreamCollator.C
bool.C
boolIO.C
Switch.C
SwitchIO.C
boolList.C
charIO.C
wcharIO.C
directionIO.C
uint32.C
uint32IO.C
uint64.C
uint64IO.C
uintIO.C
int32.C
int32IO.C
int64.C
int64IO.C
intIO.C
label.C
uLabel.C
labelIOList.C
labelListIOList.C
longDoubleScalar.C
doubleScalar.C
floatScalar.C
scalar.C
incGamma.C
invIncGamma.C
scalarList.C
scalarIOList.C
scalarListIOList.C
diagTensor.C
sphericalTensor.C
labelSphericalTensor.C
labelSymmTensor.C
symmTensor.C
labelTensor.C
tensor.C
sphericalTensorList.C
symmTensorList.C
tensorList.C
complexVector.C
floatVector.C
floatTensor.C
labelVector.C
vector.C
vectorList.C
vectorIOList.C
vectorListIOList.C
tensor2D.C
sphericalTensor2D.C
symmTensor2D.C
vector2D.C
complex.C
globalIndexAndTransform.C
transformer.C
quaternion.C
septernion.C
triad.C
makeFunction1s.C
reverseRamp.C
linearRamp.C
quadraticRamp.C
quarterSineRamp.C
quarterCosineRamp.C
halfCosineRamp.C
squarePulse.C
tableBase.C
makeTableReaders.C
unknownTypeFunction1.C
makeFunction2s.C
subModelBase.C
string.C
stringIO.C
stringIOList.C
verbatimString.C
verbatimStringIO.C
word.C
wordIO.C
wordIOList.C
fileName.C
fileNameIO.C
variable.C
variableIO.C
functionName.C
functionNameIO.C
wordRe.C
hashedWordList.C
stringOps.C
flipOp.C
Hasher.C
SHA1.C
SHA1Digest.C
Random.C
labelRange.C
labelRanges.C
scalarRange.C
scalarRanges.C
spatialVector.C
spatialTensor.C
compactSpatialTensor.C
cubicEqn.C
quadraticEqn.C
barycentric.C
barycentric2D.C
HashTableCore.C
ListHashTableCore.C
ParSortableListName.C
PackedListCore.C
PackedBoolList.C
ListOps.C
SLListBase.C
DLListBase.C
tokenIO.C
IOstream.C
Istream.C
Ostream.C
ISstream.C
OSstream.C
SstreamsPrint.C
readHexLabel.C
prefixOSstream.C
gzstream.C
IFstream.C
OFstream.C
masterOFstream.C
ITstream.C
StringStreamsPrint.C
UIPstream.C
IPstream.C
UPstreamCommsStruct.C
Pstream.C
UOPstream.C
OPstream.C
PstreamBuffers.C
dictionary.C
dictionaryIO.C
keyType.C
entry.C
entryIO.C
primitiveEntry.C
primitiveEntryIO.C
dictionaryEntry.C
dictionaryEntryIO.C
dictionaryListEntry.C
dictionaryListEntryIO.C
negEntry.C
calcEntry.C
codeStream.C
functionEntry.C
includeEntry.C
includeEtcEntry.C
includeFuncEntry.C
includeIfPresentEntry.C
inputSyntaxEntry.C
inputModeEntry.C
removeEntry.C
ifeqEntry.C
ifEntry.C
IOdictionary.C
IOdictionaryIO.C
localIOdictionary.C
systemDict.C
IOMapName.C
decomposedBlockData.C
GlobalIOLists.C
GlobalIOFields.C
IOobject.C
IOobjectIO.C
IOobjectReadHeader.C
IOobjectWriteHeader.C
regIOobject.C
regIOobjectRead.C
regIOobjectWrite.C
IOobjectList.C
objectRegistry.C
CallbackRegistryName.C
dlLibraryTable.C
dynamicCode.C
dynamicCodeContext.C
codedBase.C
compileTemplate.C
functionObject.C
functionObjectList.C
wordAndDictionary.C
writeFile.C
logFiles.C
writeObjectsBase.C
writeLocalObjects.C
timeControl.C
timeControlFunctionObject.C
regionFunctionObject.C
TimePaths.C
TimeState.C
Time.C
TimeIO.C
findTimes.C
subCycleTime.C
timeSelector.C
instant.C
dimensionSet.C
dimensionSetIO.C
dimensionSets.C
dimensionedScalar.C
dimensionedSphericalTensor.C
dimensionedSymmTensor.C
dimensionedTensor.C
solution.C
scalarMatrices.C
SVD.C
LUscalarMatrix.C
procLduMatrix.C
procLduInterface.C
lduMatrix.C
lduMatrixOperations.C
lduMatrixATmul.C
lduMatrixUpdateMatrixInterfaces.C
lduMatrixSolver.C
lduMatrixSmoother.C
lduMatrixPreconditioner.C
diagonalSolver.C
smoothSolver.C
PCG.C
PBiCG.C
PBiCGStab.C
GaussSeidelSmoother.C
symGaussSeidelSmoother.C
nonBlockingGaussSeidelSmoother.C
DICSmoother.C
FDICSmoother.C
DICGaussSeidelSmoother.C
DILUSmoother.C
DILUGaussSeidelSmoother.C
noPreconditioner.C
diagonalPreconditioner.C
DICPreconditioner.C
FDICPreconditioner.C
DILUPreconditioner.C
GAMGPreconditioner.C
lduAddressing.C
lduInterface.C
processorLduInterface.C
cyclicLduInterface.C
lduInterfaceField.C
processorLduInterfaceField.C
cyclicLduInterfaceField.C
GAMGSolver.C
GAMGSolverAgglomerateMatrix.C
GAMGSolverInterpolate.C
GAMGSolverScale.C
GAMGSolverSolve.C
GAMGInterface.C
GAMGInterfaceNew.C
processorGAMGInterface.C
processorCyclicGAMGInterface.C
cyclicGAMGInterface.C
GAMGInterfaceField.C
GAMGInterfaceFieldNew.C
processorGAMGInterfaceField.C
processorCyclicGAMGInterfaceField.C
cyclicGAMGInterfaceField.C
GAMGAgglomeration.C
GAMGAgglomerateLduAddressing.C
pairGAMGAgglomeration.C
pairGAMGAgglomerate.C
algebraicPairGAMGAgglomeration.C
dummyAgglomeration.C
GAMGProcAgglomeration.C
masterCoarsestGAMGProcAgglomeration.C
manualGAMGProcAgglomeration.C
eagerGAMGProcAgglomeration.C
noneGAMGProcAgglomeration.C
procFacesGAMGProcAgglomeration.C
lduMesh.C
lduPrimitiveMesh.C
lduMatrices.C
solverPerformance.C
LduInterfaceFields.C
lduSmoothers.C
lduPreconditioners.C
lduSolvers.C
line.C
plane.C
intersection.C
pointIndexHitList.C
pointIndexHitIOList.C
edge.C
edgeIOList.C
face.C
faceIntersection.C
faceContactSphere.C
faceAreaInContact.C
faceIOList.C
cell.C
oppositeCellFace.C
cellIOList.C
tetCell.C
cellModeller.C
cellModel.C
cellModelIO.C
cellShape.C
cellShapeEqual.C
cellShapeIO.C
cellShapeIOList.C
patchIdentifier.C
coupleGroupIdentifier.C
meshObject.C
polyPatch.C
polyPatchNew.C
coupledPolyPatch.C
genericPolyPatch.C
cyclicTransform.C
cyclicPolyPatch.C
cyclicSlipPolyPatch.C
emptyPolyPatch.C
processorCyclicPolyPatch.C
processorPolyPatch.C
symmetryPlanePolyPatch.C
symmetryPolyPatch.C
wedgePolyPatch.C
internalPolyPatch.C
wallPolyPatch.C
polyBoundaryMesh.C
polyBoundaryMeshEntries.C
commSchedule.C
globalMeshData.C
globalPoints.C
globalIndex.C
syncTools.C
polyMeshTetDecomposition.C
tetIndices.C
zone.C
cellZone.C
cellZoneNew.C
faceZone.C
faceZoneNew.C
pointZone.C
pointZoneNew.C
polyMesh.C
polyMeshFromShapeMesh.C
polyMeshIO.C
polyMeshInitMesh.C
polyMeshClear.C
polyMeshUpdate.C
polyMeshCheck.C
polyMeshTools.C
primitiveMesh.C
primitiveMeshCellCells.C
primitiveMeshCellCentresAndVols.C
primitiveMeshCellEdges.C
primitiveMeshCells.C
primitiveMeshClear.C
primitiveMeshEdgeCells.C
primitiveMeshEdgeFaces.C
primitiveMeshEdges.C
primitiveMeshFaceCentresAndAreas.C
primitiveMeshFindCell.C
primitiveMeshPointCells.C
primitiveMeshPointFaces.C
primitiveMeshPointPoints.C
primitiveMeshCellPoints.C
primitiveMeshCalcCellShapes.C
primitiveMeshCheck.C
primitiveMeshCheckPointNearness.C
primitiveMeshCheckEdgeLength.C
primitiveMeshTools.C
patchZones.C
walkPatch.C
cellMatcher.C
hexMatcher.C
wedgeMatcher.C
prismMatcher.C
pyrMatcher.C
tetWedgeMatcher.C
tetMatcher.C
degenerateMatcher.C
mapPolyMesh.C
faceMapper.C
cellMapper.C
mapDistribute.C
mapDistributeBase.C
mapDistributePolyMesh.C
IOmapDistribute.C
mapAddedPolyMesh.C
PrimitivePatchName.C
pointMesh.C
pointMapper.C
pointPatchMapper.C
pointPatch.C
facePointPatch.C
facePointPatchNew.C
coupledPointPatch.C
genericPointPatch.C
cyclicPointPatch.C
cyclicSlipPointPatch.C
emptyPointPatch.C
processorPointPatch.C
processorCyclicPointPatch.C
symmetryPlanePointPatch.C
symmetryPointPatch.C
wedgePointPatch.C
internalPointPatch.C
coupledFacePointPatch.C
wallPointPatch.C
pointBoundaryMesh.C
boundBox.C
treeBoundBox.C
matchPoints.C
uniformDimensionedFields.C
uniformGeometricFields.C
cloud.C
directFieldMapper.C
generalFieldMapper.C
setSizeFieldMapper.C
labelField.C
scalarField.C
vectorField.C
vector2DField.C
sphericalTensorField.C
diagTensorField.C
symmTensorField.C
tensorField.C
quaternionField.C
triadField.C
complexFields.C
labelIOField.C
labelFieldIOField.C
scalarIOField.C
scalarFieldIOField.C
vectorIOField.C
vectorFieldIOField.C
vector2DIOField.C
vector2DFieldIOField.C
sphericalTensorIOField.C
sphericalTensorFieldIOField.C
diagTensorIOField.C
diagTensorFieldIOField.C
symmTensorIOField.C
symmTensorFieldIOField.C
tensorIOField.C
tensorFieldIOField.C
quaternionIOField.C
triadIOField.C
transformField.C
pointPatchFields.C
calculatedPointPatchFields.C
coupledPointPatchFields.C
valuePointPatchFields.C
fixedValuePointPatchFields.C
zeroGradientPointPatchFields.C
cyclicPointPatchFields.C
cyclicSlipPointPatchFields.C
emptyPointPatchFields.C
processorPointPatchFields.C
processorCyclicPointPatchFields.C
symmetryPlanePointPatchFields.C
symmetryPointPatchFields.C
wedgePointPatchFields.C
internalPointPatchFields.C
slipPointPatchFields.C
fixedNormalSlipPointPatchFields.C
uniformFixedValuePointPatchFields.C
codedFixedValuePointPatchFields.C
pointFields.C
bandCompression.C
preservePatchTypes.C
PatchToPatchInterpolationName.C
interpolationWeights.C
linearInterpolationWeights.C
splineInterpolationWeights.C
indexedOctreeName.C
treeDataCell.C
volumeType.C
polygonTriangulate.C
dynamicIndexedOctreeName.C
dynamicTreeDataPoint.C
curve.C
graph.C
rawGraph.C
gnuplotGraph.C
xmgrGraph.C
jplotGraph.C
data.C
residuals.C
)

target_link_libraries(${PROJECT_NAME}
OSspecific
Pstream
z
)
