cmake_minimum_required(VERSION 3.17)

include(${WORKSPACE}/etc/base.cmake)

project(meshTools)

add_library(${PROJECT_NAME} SHARED
edgeMesh.C
edgeMeshIO.C
edgeMeshNew.C
edgeMeshFormatsCore.C
edgeMeshFormat.C
edgeMeshFormatRunTime.C
extendedFeatureEdgeMeshFormat.C
extendedFeatureEdgeMeshFormatRunTime.C
NASedgeFormat.C
NASedgeFormatRunTime.C
OBJedgeFormat.C
OBJedgeFormatRunTime.C
STARCDedgeFormat.C
STARCDedgeFormatRunTime.C
VTKedgeFormat.C
VTKedgeFormatRunTime.C
featureEdgeMesh.C
extendedEdgeMesh.C
extendedEdgeMeshNew.C
extendedEdgeMeshFormat.C
extendedEdgeMeshFormatRunTime.C
extendedFeatureEdgeMesh.C
cellClassification.C
cellInfo.C
cellQuality.C
cellDistFuncs.C
patchWave.C
wallPoint.C
cellFeatures.C
coordinateSystem.C
coordinateSystemNew.C
coordinateSystems.C
cylindricalCS.C
cartesianCS.C
axesRotation.C
coordinateRotation.C
coordinateRotationNew.C
EulerCoordinateRotation.C
STARCDCoordinateRotation.C
cylindrical.C
edgeFaceCirculator.C
polyMeshZipUpCells.C
meshSearch.C
meshSearchFACE_CENTRE_TRISMeshObject.C
meshSearchMeshObject.C
meshTools.C
PointEdgeWaveName.C
pointEdgePoint.C
PatchEdgeFaceWaveName.C
patchEdgeFaceInfo.C
patchPatchDist.C
patchEdgeFaceRegion.C
patchEdgeFaceRegions.C
MeshWaveName.C
FaceCellWaveName.C
regionSplit.C
localPointRegion.C
treeDataEdge.C
treeDataFace.C
treeDataPoint.C
treeDataPrimitivePatchName.C
treeDataTriSurface.C
searchableSurface.C
searchableBox.C
searchableCylinder.C
searchableDisk.C
searchablePlane.C
searchablePlate.C
searchableSphere.C
searchableSurfaceCollection.C
searchableSurfaces.C
searchableSurfacesQueries.C
searchableSurfaceWithGaps.C
triSurfaceMesh.C
extractCloseness.C
closedTriSurfaceMesh.C
searchableExtrudedCircle.C
cellSet.C
topoSet.C
faceSet.C
pointSet.C
cellZoneSet.C
faceZoneSet.C
pointZoneSet.C
topoSetSource.C
faceToCell.C
fieldToCell.C
pointToCell.C
shapeToCell.C
boxToCell.C
regionToCell.C
rotatedBoxToCell.C
labelToCell.C
surfaceToCell.C
cellToCell.C
nearestToCell.C
nbrToCell.C
zoneToCell.C
sphereToCell.C
cylinderToCell.C
faceZoneToCell.C
cylinderAnnulusToCell.C
targetVolumeToCell.C
patchDistanceToCell.C
faceToFace.C
labelToFace.C
cellToFace.C
normalToFace.C
pointToFace.C
patchToFace.C
boundaryToFace.C
zoneToFace.C
boxToFace.C
regionToFace.C
cylinderToFace.C
cylinderAnnulusToFace.C
labelToPoint.C
pointToPoint.C
cellToPoint.C
faceToPoint.C
boxToPoint.C
surfaceToPoint.C
zoneToPoint.C
nearestToPoint.C
faceZoneToFaceZone.C
setsToFaceZone.C
setToFaceZone.C
setAndNormalToFaceZone.C
searchableSurfaceToFaceZone.C
planeToFaceZone.C
setToCellZone.C
setToPointZone.C
momentOfInertia.C
surfaceSets.C
orientedSurface.C
surfaceLocation.C
surfaceIntersection.C
surfaceIntersectionFuncs.C
edgeIntersections.C
booleanSurface.C
intersectedSurface.C
edgeSurface.C
triSurfaceSearch.C
triSurfaceRegionSearch.C
triangleFuncs.C
surfaceFeatures.C
triSurfaceTools.C
geompack.C
pointToPointPlanarInterpolation.C
twoDPointCorrector.C
AMIInterpolation.C
AMIInterpolationParallelOps.C
faceAreaIntersect.C
cyclicAMIGAMGInterface.C
cyclicAMIGAMGInterfaceField.C
cyclicACMIGAMGInterface.C
cyclicACMIGAMGInterfaceField.C
cyclicRepeatAMIGAMGInterface.C
cyclicRepeatAMIGAMGInterfaceField.C
AMIMethod.C
AMIMethodNew.C
directAMI.C
faceAreaWeightAMI.C
mapNearestAMI.C
partialFaceAreaWeightAMI.C
sweptFaceAreaWeightAMI.C
cyclicAMILduInterface.C
cyclicAMILduInterfaceField.C
cyclicAMIPolyPatch.C
cyclicAMIPointPatch.C
cyclicAMIPointPatchFields.C
cyclicACMILduInterface.C
cyclicACMILduInterfaceField.C
cyclicACMIPolyPatch.C
cyclicACMIPointPatch.C
cyclicACMIPointPatchFields.C
cyclicRepeatAMILduInterface.C
cyclicRepeatAMILduInterfaceField.C
cyclicRepeatAMIPolyPatch.C
cyclicRepeatAMIPointPatch.C
cyclicRepeatAMIPointPatchFields.C
mappedPatchBase.C
mappedPolyPatch.C
mappedWallPolyPatch.C
mappedVariableThicknessWallPolyPatch.C
mappedPointPatch.C
mappedWallPointPatch.C
meshStructure.C
topoDistanceData.C
pointTopoDistanceData.C
regionCoupledBase.C
regionCoupledPolyPatch.C
regionCoupledWallPolyPatch.C
regionCoupledLduInterface.C
regionCoupledPointPatch.C
regionCoupledWallPointPatch.C
regionCoupledBaseGAMGInterface.C
regionCoupledGAMGInterface.C
regionCoupledWallGAMGInterface.C
regionCoupledGAMGInterfaceField.C
regionCoupledWallGAMGInterfaceField.C
tetOverlapVolume.C
)

target_link_libraries(${PROJECT_NAME}
triSurface
surfMesh
fileFormats
)