cmake_minimum_required(VERSION 3.17)

include(${WORKSPACE}/etc/base.cmake)

project(finiteVolume)

add_library(${PROJECT_NAME} SHARED
fvMeshGeometry.C
fvMesh.C
singleCellFvMesh.C
fvCellSet.C
fvBoundaryMesh.C
fvPatch.C
fvPatchNew.C
coupledFvPatch.C
genericFvPatch.C
cyclicFvPatch.C
cyclicAMIFvPatch.C
cyclicACMIFvPatch.C
cyclicSlipFvPatch.C
emptyFvPatch.C
cyclicRepeatAMIFvPatch.C
processorFvPatch.C
processorCyclicFvPatch.C
symmetryPlaneFvPatch.C
symmetryFvPatch.C
wedgeFvPatch.C
internalFvPatch.C
wallFvPatch.C
mappedFvPatch.C
mappedWallFvPatch.C
regionCoupledBaseFvPatch.C
regionCoupledFvPatch.C
regionCoupledWallFvPatch.C
wallPointYPlus.C
nearWallDistNoSearch.C
nearWallDist.C
wallDist.C
patchDistMethod.C
meshWavePatchDistMethod.C
PoissonPatchDistMethod.C
advectionDiffusionPatchDistMethod.C
fvPatchMapper.C
fvSurfaceMapper.C
extendedCellToCellStencil.C
extendedCentredCellToCellStencil.C
cellToCellStencil.C
CFCCellToCellStencil.C
CPCCellToCellStencil.C
CECCellToCellStencil.C
centredCECCellToCellStencilObject.C
centredCFCCellToCellStencilObject.C
centredCPCCellToCellStencilObject.C
cellToFaceStencil.C
CFCCellToFaceStencil.C
CECCellToFaceStencil.C
CPCCellToFaceStencil.C
FECCellToFaceStencil.C
extendedCellToFaceStencil.C
extendedCentredCellToFaceStencil.C
extendedUpwindCellToFaceStencil.C
centredCECCellToFaceStencilObject.C
centredCFCCellToFaceStencilObject.C
centredCPCCellToFaceStencilObject.C
centredFECCellToFaceStencilObject.C
upwindCECCellToFaceStencilObject.C
upwindCFCCellToFaceStencilObject.C
upwindCPCCellToFaceStencilObject.C
upwindFECCellToFaceStencilObject.C
pureUpwindCFCCellToFaceStencilObject.C
faceToCellStencil.C
CFCFaceToCellStencil.C
extendedFaceToCellStencil.C
extendedCentredFaceToCellStencil.C
centredCFCFaceToCellStencilObject.C
fvMeshFunctionObject.C
volRegion.C
fvPatchFields.C
basicSymmetryFvPatchScalarField.C
calculatedFvPatchFields.C
extrapolatedCalculatedFvPatchFields.C
coupledFvPatchFields.C
directionMixedFvPatchFields.C
fixedGradientFvPatchFields.C
fixedValueFvPatchFields.C
mixedFvPatchFields.C
slicedFvPatchFields.C
transformFvPatchFields.C
transformFvPatchScalarField.C
zeroGradientFvPatchFields.C
cyclicFvPatchFields.C
cyclicAMIFvPatchFields.C
cyclicACMIFvPatchFields.C
cyclicSlipFvPatchFields.C
emptyFvPatchFields.C
jumpCyclicFvPatchFields.C
jumpCyclicAMIFvPatchFields.C
cyclicRepeatAMIFvPatchFields.C
processorFvPatchFields.C
processorFvPatchScalarField.C
processorCyclicFvPatchFields.C
symmetryPlaneFvPatchFields.C
symmetryPlaneFvPatchScalarField.C
symmetryFvPatchFields.C
wedgeFvPatchFields.C
wedgeFvPatchScalarField.C
internalFvPatchFields.C
activeBaffleVelocityFvPatchVectorField.C
activePressureForceBaffleVelocityFvPatchVectorField.C
advectiveFvPatchFields.C
codedFixedValueFvPatchFields.C
codedMixedFvPatchFields.C
cylindricalInletVelocityFvPatchVectorField.C
externalCoupledMixedFvPatchFields.C
fanPressureJumpFvPatchScalarField.C
fanPressureFvPatchScalarField.C
fixedFluxPressureFvPatchScalarField.C
fixedFluxExtrapolatedPressureFvPatchScalarField.C
fixedInternalValueFvPatchFields.C
fixedJumpFvPatchFields.C
fixedJumpAMIFvPatchFields.C
fixedMeanFvPatchFields.C
fixedNormalSlipFvPatchFields.C
fixedPressureCompressibleDensityFvPatchScalarField.C
flowRateInletVelocityFvPatchVectorField.C
flowRateOutletVelocityFvPatchVectorField.C
fluxCorrectedVelocityFvPatchVectorField.C
freestreamFvPatchFields.C
freestreamVelocityFvPatchVectorField.C
freestreamPressureFvPatchScalarField.C
inletOutletFvPatchFields.C
inletOutletTotalTemperatureFvPatchScalarField.C
mappedFieldFvPatchFields.C
mappedFixedInternalValueFvPatchFields.C
mappedFixedValueFvPatchFields.C
mappedFlowRateFvPatchVectorField.C
mappedVelocityFluxFixedValueFvPatchField.C
matchedFlowRateOutletVelocityFvPatchVectorField.C
noSlipFvPatchVectorField.C
movingWallVelocityFvPatchVectorField.C
outletInletFvPatchFields.C
outletMappedUniformInletFvPatchFields.C
fixedMeanOutletInletFvPatchFields.C
partialSlipFvPatchFields.C
phaseHydrostaticPressureFvPatchScalarField.C
pressureDirectedInletOutletVelocityFvPatchVectorField.C
pressureDirectedInletVelocityFvPatchVectorField.C
pressureInletOutletParSlipVelocityFvPatchVectorField.C
pressureInletOutletVelocityFvPatchVectorField.C
pressureInletUniformVelocityFvPatchVectorField.C
pressureInletVelocityFvPatchVectorField.C
pressureNormalInletOutletVelocityFvPatchVectorField.C
fixedNormalInletOutletVelocityFvPatchVectorField.C
rotatingPressureInletOutletVelocityFvPatchVectorField.C
rotatingTotalPressureFvPatchScalarField.C
rotatingWallVelocityFvPatchVectorField.C
slipFvPatchFields.C
supersonicFreestreamFvPatchVectorField.C
surfaceNormalFixedValueFvPatchVectorField.C
surfaceNormalUniformFixedValueFvPatchVectorField.C
swirlFlowRateInletVelocityFvPatchVectorField.C
swirlInletVelocityFvPatchVectorField.C
syringePressureFvPatchScalarField.C
timeVaryingMapped.C
timeVaryingMappedFixedValueFvPatchFields.C
dynamicPressureFvPatchScalarField.C
totalPressureFvPatchScalarField.C
entrainmentPressureFvPatchScalarField.C
totalTemperatureFvPatchScalarField.C
translatingWallVelocityFvPatchVectorField.C
turbulentInletFvPatchFields.C
turbulentIntensityKineticEnergyInletFvPatchScalarField.C
uniformDensityHydrostaticPressureFvPatchScalarField.C
uniformFixedGradientFvPatchFields.C
uniformFixedValueFvPatchFields.C
uniformInletOutletFvPatchFields.C
uniformJumpFvPatchFields.C
uniformJumpAMIFvPatchFields.C
uniformTotalPressureFvPatchScalarField.C
variableHeightFlowRateFvPatchField.C
variableHeightFlowRateInletVelocityFvPatchVectorField.C
outletPhaseMeanVelocityFvPatchVectorField.C
waveTransmissiveFvPatchFields.C
waveSurfacePressureFvPatchScalarField.C
interstitialInletVelocityFvPatchVectorField.C
fixedProfileFvPatchFields.C
plenumPressureFvPatchScalarField.C
interfaceCompressionFvPatchScalarField.C
pressureFvPatchScalarField.C
prghPressureFvPatchScalarFields.C
prghTotalHydrostaticPressureFvPatchScalarField.C
fvsPatchFields.C
calculatedFvsPatchFields.C
coupledFvsPatchFields.C
fixedValueFvsPatchFields.C
slicedFvsPatchFields.C
cyclicFvsPatchFields.C
cyclicAMIFvsPatchFields.C
cyclicACMIFvsPatchFields.C
cyclicSlipFvsPatchFields.C
emptyFvsPatchFields.C
cyclicRepeatAMIFvsPatchFields.C
processorFvsPatchFields.C
processorCyclicFvsPatchFields.C
symmetryPlaneFvsPatchFields.C
symmetryFvsPatchFields.C
wedgeFvsPatchFields.C
internalFvsPatchFields.C
volFields.C
surfaceFields.C
fvMatrices.C
fvScalarMatrix.C
MULES.C
faceAreaPairGAMGAgglomeration.C
interpolations.C
makeInterpolationCell.C
makeInterpolationCellPatchConstrained.C
cellPointWeight.C
makeInterpolationCellPoint.C
makeInterpolationCellPointFace.C
makeInterpolationCellPointWallModified.C
pointMVCWeight.C
makeInterpolationPointMVC.C
volPointInterpolation.C
pointConstraints.C
surfaceInterpolation.C
surfaceInterpolationSchemes.C
blendedSchemeBaseName.C
linear.C
pointLinear.C
midPoint.C
downwind.C
weighted.C
cubic.C
skewCorrectionVectors.C
skewCorrected.C
outletStabilised.C
reverseLinear.C
clippedLinear.C
harmonic.C
fixedBlended.C
localBlended.C
limiterBlended.C
CoBlended.C
cellCoBlended.C
deferred.C
localMax.C
localMin.C
linearFit.C
biLinearFit.C
quadraticLinearFit.C
quadraticFit.C
quadraticLinearUpwindFit.C
quadraticUpwindFit.C
cubicUpwindFit.C
linearPureUpwindFit.C
linearUpwind.C
linearUpwindV.C
LUST.C
limitedSurfaceInterpolationSchemes.C
upwind.C
blended.C
Gamma.C
SFCD.C
Minmod.C
vanLeer.C
vanAlbada.C
OSPRE.C
limitedLinear.C
limitedCubic.C
SuperBee.C
QUICK.C
MUSCL.C
UMIST.C
Phi.C
filteredLinear.C
filteredLinear2.C
filteredLinear3.C
limitWith.C
multivariateSurfaceInterpolationSchemes.C
multivariateSelectionSchemes.C
multivariateIndependentSchemes.C
multivariateUpwind.C
multivariateGamma.C
multivariateVanLeer.C
multivariateMinmod.C
multivariateSuperBee.C
multivariateMUSCL.C
multivariateLimitedLinear.C
multivariateLimitedCubic.C
fv.C
fvSchemes.C
ddtSchemes.C
steadyStateDdtSchemes.C
EulerDdtSchemes.C
CoEulerDdtSchemes.C
SLTSDdtSchemes.C
localEulerDdt.C
localEulerDdtSchemes.C
backwardDdtSchemes.C
CrankNicolsonDdtSchemes.C
boundedDdtSchemes.C
d2dt2Schemes.C
steadyStateD2dt2Schemes.C
EulerD2dt2Schemes.C
divSchemes.C
gaussDivSchemes.C
gradSchemes.C
gaussGrads.C
leastSquaresVectors.C
leastSquaresGrads.C
LeastSquaresGrads.C
fourthGrads.C
faceLimitedGrads.C
cellLimitedGrads.C
faceMDLimitedGrads.C
cellMDLimitedGrads.C
snGradSchemes.C
correctedSnGrads.C
faceCorrectedSnGrads.C
limitedSnGrads.C
uncorrectedSnGrads.C
orthogonalSnGrads.C
quadraticFitSnGrads.C
linearFitSnGrads.C
convectionSchemes.C
gaussConvectionSchemes.C
multivariateGaussConvectionSchemes.C
boundedConvectionSchemes.C
laplacianSchemes.C
gaussLaplacianSchemes.C
fvcFlux.C
fvcMeshPhi.C
fvcSmooth.C
fvcReconstructMag.C
findRefCell.C
constrainHbyA.C
adjustPhi.C
bound.C
correctUphiBCs.C
pressureReference.C
levelSet.C
solutionControl.C
singleRegionSolutionControl.C
multiRegionSolutionControl.C
nonOrthogonalSolutionControl.C
fluidSolutionControl.C
simpleControl.C
pisoControl.C
solidNoLoopControl.C
pimpleControl.C
pimpleNoLoopControl.C
pimpleLoop.C
pimpleMultiRegionControl.C
convergenceControl.C
singleRegionConvergenceControl.C
correctorConvergenceControl.C
singleRegionCorrectorConvergenceControl.C
porosityModel.C
porosityModelNew.C
porosityModelList.C
IOporosityModelList.C
DarcyForchheimer.C
fixedCoeff.C
powerLaw.C
solidification.C
MRFZone.C
MRFZoneList.C
IOMRFZoneList.C
SRFModel.C
SRFModelNew.C
rpm.C
SRFVelocityFvPatchVectorField.C
SRFWallVelocityFvPatchVectorField.C
SRFFreestreamVelocityFvPatchVectorField.C
fvModel.C
fvModels.C
fvConstraint.C
fvConstraints.C
)

target_link_libraries(${PROJECT_NAME}
OpenFOAM
triSurface
meshTools
)
