cmake_minimum_required(VERSION 3.17)

include(${WORKSPACE}/etc/base.cmake)

project(dynamicMesh)

add_library(${PROJECT_NAME} SHARED
attachDetach.C
attachInterface.C
detachInterface.C
attachDetachPointMatchMap.C
layerAdditionRemoval.C
setLayerPairing.C
addCellLayer.C
removeCellLayer.C
enrichedPatch.C
enrichedPatchPointMap.C
enrichedPatchFaces.C
enrichedPatchPointPoints.C
enrichedPatchCutFaces.C
enrichedPatchMasterPoints.C
polyMeshModifier.C
polyMeshModifierNew.C
topoActions.C
polyTopoChanger.C
polyTopoChange.C
addPatchCellLayer.C
pointEdgeCollapse.C
edgeCollapser.C
faceCollapser.C
removeCells.C
removeFaces.C
refinementData.C
refinementDistanceData.C
removePoints.C
combineFaces.C
duplicatePoints.C
tetDecomposer.C
hexRef8.C
hexRef8Data.C
refinementHistory.C
slidingInterface.C
slidingInterfaceProjectPoints.C
coupleSlidingInterface.C
slidingInterfaceAttachedAddressing.C
slidingInterfaceClearCouple.C
decoupleSlidingInterface.C
perfectInterface.C
repatchMesh.C
repatchPatch.C
setUpdater.C
boundaryCutter.C
meshCutter.C
meshCutAndRemove.C
undoableMeshCutter.C
refinementIterator.C
multiDirRefinement.C
cellLooper.C
topoCellLooper.C
geomCellLooper.C
hexCellLooper.C
directions.C
directionInfo.C
edgeVertex.C
cellCuts.C
splitCell.C
refineCell.C
wallLayerCells.C
wallNormalInfo.C
attachPolyTopoChanger.C
repatchPolyTopoChanger.C
fvMeshAdder.C
fvMeshDistribute.C
faceCoupleInfo.C
polyMeshAdder.C
fvMeshTools.C
fvMeshSubset.C
motionSmoother.C
motionSmootherAlgo.C
motionSmootherAlgoCheck.C
motionSmootherData.C
polyMeshCheck.C
badQualityToCell.C
badQualityToFace.C
motionSolver.C
points0MotionSolver.C
displacementMotionSolver.C
displacementLayeredMotionMotionSolver.C
pointEdgeStructuredWalk.C
displacementLinearMotionMotionSolver.C
componentDisplacementMotionSolver.C
velocityMotionSolver.C
componentVelocityMotionSolver.C
solidBodyMotionSolver.C
multiSolidBodyMotionSolver.C
interpolatingSolidBodyMotionSolver.C
motionSolverList.C
solidBodyMotionFunction.C
solidBodyMotionFunctionNew.C
SDA.C
sixDoFMotion.C
linearMotion.C
rotatingMotion.C
axisRotationMotion.C
multiMotion.C
oscillatingLinearMotion.C
oscillatingRotatingMotion.C
solidBodyMotionDisplacementPointPatchVectorField.C
createShellMesh.C
extrudePatchMesh.C
polyMeshFilterSettings.C
polyMeshFilter.C
externalPointEdgePoint.C
pointPatchDist.C
dynamicMeshPointInterpolator.C
)

target_link_libraries(${PROJECT_NAME}
finiteVolume
triSurface
extrudeModel
)