cmake_minimum_required(VERSION 3.17)

include(${WORKSPACE}/etc/base.cmake)

project(sampling)

add_library(${PROJECT_NAME} SHARED
probes.C
patchProbes.C
probesGrouping.C
coordSet.C
sampledSet.C
sampledSets.C
sampledSetsGrouping.C
arcUniform.C
boxUniform.C
circleRandom.C
lineCell.C
lineCellFace.C
lineFace.C
lineUniform.C
boundaryPoints.C
boundaryRandom.C
points.C
sphereRandom.C
triSurfaceMeshSampledSet.C
cellSetSampledSet.C
faceSetSampledSet.C
setWriters.C
ensightSetWriterRunTime.C
gnuplotSetWriterRunTime.C
jplotSetWriterRunTime.C
rawSetWriterRunTime.C
vtkSetWriterRunTime.C
xmgraceSetWriterRunTime.C
csvSetWriterRunTime.C
cuttingPlane.C
sampledPatch.C
sampledPatchInternalField.C
sampledPlane.C
isoSurface.C
sampledIsoSurface.C
distanceSurface.C
sampledCuttingPlane.C
sampledSurface.C
sampledSurfaces.C
sampledSurfacesGrouping.C
sampledTriSurfaceMesh.C
thresholdCellFaces.C
sampledThresholdCellFaces.C
surfaceWriter.C
noSurfaceWriter.C
ensightSurfaceWriter.C
ensightPTraits.C
foamSurfaceWriter.C
nastranSurfaceWriter.C
proxySurfaceWriter.C
rawSurfaceWriter.C
starcdSurfaceWriter.C
vtkSurfaceWriter.C
writePatchGraph.C
writeCellGraph.C
makeGraph.C
meshToMesh.C
meshToMeshParallelOps.C
distributedWeightedFvPatchFieldMapper.C
meshToMeshMethod.C
meshToMeshMethodNew.C
cellVolumeWeightMethod.C
directMethod.C
mapNearestMethod.C
meshToMesh0.C
calculateMeshToMesh0Addressing.C
calculateMeshToMesh0Weights.C
)

target_link_libraries(${PROJECT_NAME}
finiteVolume
meshTools
surfMesh
fileFormats
triSurface
lagrangian
dynamicMesh
conversion
)