cmake_minimum_required(VERSION 3.17)

include(${WORKSPACE}/etc/base.cmake)

project(momentumTransportModels)

add_library(${PROJECT_NAME} SHARED
momentumTransportModel.C
v2fBase.C
LESdelta.C
cubeRootVolDelta.C
PrandtlDelta.C
vanDriestDelta.C
smoothDelta.C
maxDeltaxyz.C
IDDESDelta.C
LESfilter.C
simpleFilter.C
laplaceFilter.C
anisotropicFilter.C
fixedShearStressFvPatchVectorField.C
porousBafflePressureFvPatchField.C
nutWallFunctionFvPatchScalarField.C
nutkWallFunctionFvPatchScalarField.C
nutkRoughWallFunctionFvPatchScalarField.C
nutUWallFunctionFvPatchScalarField.C
nutUSpaldingWallFunctionFvPatchScalarField.C
nutLowReWallFunctionFvPatchScalarField.C
nutURoughWallFunctionFvPatchScalarField.C
epsilonWallFunctionFvPatchScalarField.C
omegaWallFunctionFvPatchScalarField.C
kqRWallFunctionFvPatchFields.C
kLowReWallFunctionFvPatchScalarField.C
v2WallFunctionFvPatchScalarField.C
fWallFunctionFvPatchScalarField.C
turbulentMixingLengthDissipationRateInletFvPatchScalarField.C
turbulentMixingLengthFrequencyInletFvPatchScalarField.C
generalisedNewtonianViscosityModel.C
generalisedNewtonianViscosityModelNew.C
CrossPowerLaw.C
BirdCarreau.C
Casson.C
HerschelBulkley.C
powerLaw.C
strainRateFunction.C
)

target_link_libraries(${PROJECT_NAME}
finiteVolume
meshTools
)